--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Intro to NodeJS and ExpressJS",
   "main": "demo.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon demo.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/dilreyyy/100daysofcode-intro-to-nodejs#readme",
   "dependencies": {
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.18"
   }
 }
